# Playground

./: .gitignore  README.md
exercise1/: Cargo.toml
exercise10/: Cargo.toml
exercise10/src/: main.rs
exercise11/: Cargo.toml  build.rs  output.json
exercise11/src/: main.rs
exercise12/: Cargo.toml  tralala.rs
exercise12/src/: connector.rs  main.rs
exercise13/: Cargo.toml  build.rs
exercise13/inputs/: assets.json  ticker.json
exercise13/src/: main.rs  types.rs
exercise13/tmp/: Assets.out  Ticker.out
exercise14/: Cargo.toml
exercise14/src/: main.rs
exercise2/: Cargo.toml
exercise2/src/: main.rs
exercise3/: Cargo.toml
exercise3/src/: main.rs
exercise4/: Cargo.toml
exercise4/src/: main.rs
exercise5/: Cargo.toml
exercise5/src/: main.rs
exercise6/: Cargo.toml
exercise6/src/: connector.rs  main.rs  parser.rs
exercise8/: Cargo.toml
exercise8/derive-macro/src/: lib.rs
exercise8/src/: main.rs
exercise9/: Cargo.toml
exercise9/data/user/: output.json
exercise9/src/: main.rs
