[package]
name = "exercise1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
futures = "0.3"
juniper = "0.15.10"
juniper_warp = "0.7.0"
log = "0.4"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
