[package]
name = "exercise10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-expand = "1.0.30"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
json_typegen = "0.7.0"
walkdir = "2.3.2"
