[package]
name = "exercise11"
version = "0.1.0"
edition = "2021"
authors = ["Alex Inestal <alex@wraph.io>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-expand = "1.0.30"
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"

json_typegen = { path = "../json_typegen/json_typegen" }
json_typegen_shared = { path = "../json_typegen/json_typegen_shared" }
wraph = { path = "../json_typegen/wraph" }
