[package]
name = "exercise12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-expand = "1.0.30"
env_logger = "0.9"
json_typegen = "0.7.0"
juniper = "0.15.10"
juniper_warp = "0.7.0"
log = "0.4"
reqwest = { version = "0.11.11", features = ["rustls-tls"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.2"
